English vs. gibberish) in more cases.

** Additional sanitizers
The `configure` options of `--enable-msan` and `--enable-ubsan` have been added
to enable clang's Memory Sanitizer and Undefined Behavior Sanitizer,
respectively.  The previous `--enable-address-sanitizer` has been renamed to
`--enable-asan`.

** `show` autocompletion
The `show` command now uses command-specific autocompletion.

** Predefined types
Fixed spelling of `bad_typeid`; added `source_location`, `type_index`, and
`type_info`.

** Types as objects, English edition
Previously declared types in pseudo-Engilsh are now checked to ensure they're
not being used as objects:

    cdecl> struct S
    cdecl> declare S as int             // error (now)


* Changes in Cdecl 11.15

** `_Atomic` arrays
`_Atomic` arrays are now correctly forbidden:

    typedef int A[2]
    explain _Atomic A x  // error: _Atomic array of T is illegal

Note that:

    _Atomic int x[2];    // OK: array of _Atomic T is legal

is legal.

** `CDECLRC` environment variable
If none of the `--config`, `-c`, `--no-config`, nor `-C` command line options
are given and the value of the `CDECLRC` environment variable isn't empty, it's
used as the full path to the cdeclrc file to read upon start-up.

** Configuration file default language
Previously, cdecl would temporarily set the current language to the latest
supported version of C++ while reading a configuration file.  It no longer does
this as a special case.  Now, as always, it sets the default language based on
the executable name.

** `enum` alignment in C11
Alignment of enums is now correctly allowed in C11.

** Types as objects
Previously declared types are now checked to ensure they're not being used as
objects:

    cdecl> struct S
    cdecl> explain int S                // error (now)


* Changes in Cdecl 11.14

** Alternative tokens & digraphs
Now prints a warning that neither alternative tokens nor digraphs are supported